install/kubernetes/kubeflow/v1.2.0/.cache/manifests/manifests-1.2.0/aws/istio-ingress/overlays/secure/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: istio-ingress
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: $(certArn)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/inbound-cidrs: $(inboundCidrs)
    external-dns.alpha.kubernetes.io/hostname: $(hostname)
